# funny-filters

./: CMakeLists.txt  README.md  application.cpp  application.h  bitmap.cpp  bitmap.h  crop.cpp  crop.h  custom_gradient.cpp  custom_gradient.h  edge_detection.cpp  edge_detection.h  exceptions.h  filter.h  filter_creators.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  image_processor.cpp  matrix.h  negative.cpp  negative.h  parsed_input.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h  sharpening.cpp  sharpening.h  status.h  test.cpp
